# Azure-FinOps-MCP-Server

./: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  server.json
src/azure_finops_mcp/: __init__.py  azure_clients.py  cache.py  config.py  server.py
src/azure_finops_mcp/tools/: budgets.py  cost.py  forecast.py  optimization.py  subscriptions.py
tests/: conftest.py  test_tools.py
