[project]
name = "azure-finops-mcp"
version = "0.1.1"
description = "MCP server exposing Azure FinOps capabilities to LLM clients."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-costmanagement>=4.0.1",
    "azure-mgmt-consumption>=10.0.0",
    "azure-mgmt-advisor>=9.0.0",
    "six>=1.16.0",
    "azure-mgmt-resource>=23.1.1",
    "azure-mgmt-subscription>=3.0.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-compute>=33.0.0",
    "azure-monitor-query>=1.3.0,<2.0",
    "python-dotenv>=1.0.1",
    "cachetools>=5.3.0",
]

[project.scripts]
azure-finops-mcp = "azure_finops_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_finops_mcp"]
